[package]
name = "lox"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"

[lib]
name = "lox"
path = "src/lib.rs"

[[bin]]
name = "lox-cli"
path = "src/main.rs"
doc = false
doctest = false
required-features = ["tracing-subscriber"]

[dependencies]
thiserror = "1.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2.12", optional = true }
