[package]
name = "walox"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
smol_str = "0.1"

[dev-dependencies.walox-test-util]
path = "test_util"
version = "*"

[[test]]
name = "filecheck-interpreter"
path = "tests/filecheck_interpreter.rs"
harness = false
doc = false
doctest = false

[[test]]
name = "filecheck-vm"
path = "tests/filecheck_vm.rs"
harness = false
doc = false
doctest = false

[workspace]
members = ["cli", "test_util"]
