[package]
name = "walox-test-util"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = false

[dependencies]
filecheck = "0.5"
threadpool = "1.8"
ansi_term = "0.12"
backtrace = "0.3"
anyhow = "1.0"
num_cpus = "1.13"
cargo_metadata = "0.11"
globwalk = "0.8"
regex = "1.4"
tracing-subscriber = "0.2"
tracing = "0.1"
